# terrain-generator

./: .editorconfig  Cargo.toml  README.md  TODO.md  parsed_shuttle.txt  references.md
objects/: cube.mtl  vp.mtl
shaders/: basic.vert  basic_w_color.vert  given_color.frag  phong.frag  phong.vert  white.frag
src/: camera.rs  controls.rs  event_handlers.rs  file.rs  main.rs  objects.rs  shaders.rs  util.rs
